welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: ')' expected but ';' found.
    if(day==0 ; day==6){
              ^alarmClock:3: error: ';' expected but ')' found.
    if(day==0 ; day==6){
                      ^